force-app/main/default/objects/Collection_Item__c/fields/Company_Collection__c.field-meta.xml
<CustomField>
    <fullName>Company_Collection__c</fullName>
    <label>Company Collection</label>
    <referenceTo>Company_Collection__c</referenceTo>
    <relationshipLabel>Collection Items</relationshipLabel>
    <relationshipName>Collection_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>