force-app/main/default/objects/Collection_Item__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company ID</label>
    <referenceTo>Company_ID__c</referenceTo>
    <relationshipLabel>Collection Items</relationshipLabel>
    <relationshipName>Collection_Items</relationshipName>
    <type>Lookup</type>
</CustomField>